Add building of apex-pdp docker image
Issue-ID: POLICY-866
Change-Id: I392d12c057d9474265d95a2b9cc04a3ba573dd2c
Signed-off-by: mmis <michael.morris@ericsson.com>

--- a/jjb/policy/policy-apex-pdp.yaml
+++ b/jjb/policy/policy-apex-pdp.yaml
@@ -5,7 +5,17 @@
     jobs:
       - gerrit-maven-clm:
       - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-merge-scm-mvn-script'
+	      mvn-goals: 'clean deploy -B
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
+          script:
+            !include-raw-escape: 'include-raw-docker-merge.sh'
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'clean deploy -B
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
+          script:
+            !include-raw-escape: 'include-raw-docker-release.sh'
 
     project: 'policy/apex-pdp'
     stream:
