--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.6
-envlist = coala,docs,pep8
+envlist = coala,pep8
 skipsdist = true
 
 [testenv:coala]
@@ -11,10 +11,6 @@ deps =
 commands =
     python3 -m nltk.downloader punkt maxent_treebank_pos_tagger averaged_perceptron_tagger
     coala --non-interactive
-
-# [testenv:docs]
-# deps = sphinx
-# commands = sphinx-build -b html -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/html
 
 [testenv:pep8]
 deps = flake8
