Remove unused pep8 scanner
PEP8 is a Python concept and there does not appear to be any
Python code in the scripts directory. This scanner is pointless
in this repo as is so remove it.

Issue-ID: CIMAN-1
Change-Id: I3eee63b90b7b8c377ac4b801fa6895192eb5a596
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.6
-envlist = coala,pep8
+envlist = coala
 skipsdist = true
 
 [testenv:coala]
@@ -11,7 +11,3 @@ deps =
 commands =
     python3 -m nltk.downloader punkt maxent_treebank_pos_tagger averaged_perceptron_tagger
     coala --non-interactive
-
-[testenv:pep8]
-deps = flake8
-commands = flake8 scripts/
