--- a/jenkins.ini.example
+++ b/jenkins.ini.example
@@ -1,13 +1,12 @@
 [job_builder]
 ignore_cache=True
 keep_descriptions=False
-include_path=.:scripts:~/git/
+include_path=.
 recursive=True
+retain_anchors=True
 
 [jenkins]
+user=#username#
+password=#api_token#
+url=https://jenkins.onap.org/sandbox
 query_plugins_info=False
-#user=jenkins
-#password=1234567890abcdef1234567890abcdef
-url=http://localhost:8080
-##### This is deprecated, use job_builder section instead
-#ignore_cache=True
