Update redis image
Update typo on redis image from "basebuild"
to "redis"

Change-Id: I67294294f19f8216f0acbc1e9494443fe2c7254a
Issue-ID: CIMAN-177
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jenkins-config/clouds/openstack/cattle/centos7-redis-4c-4g.cfg
+++ b/jenkins-config/clouds/openstack/cattle/centos7-redis-4c-4g.cfg
@@ -1,3 +1,3 @@
-IMAGE_NAME=ZZCI - CentOS 7 - builder - 20171102-0130
+IMAGE_NAME=ZZCI - CentOS 7 - redis - 20171102-0130
 LABELS=centos7-redis-4c-4g
 HARDWARE_ID=v2-highcpu-4
