Fix VNFRQTS project path
Fix project varaible in vnfrqts which should
describe the project path and not the name.

Change-Id: I09998139028770252ae1a439373db22057a74eaf
Issue-ID: CIMAN-179
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfrqts/vnfrqts-guidelines.yaml
+++ b/jjb/vnfrqts/vnfrqts-guidelines.yaml
@@ -1,7 +1,7 @@
 ---
 - project:
     name: vnfrqts-guidelines
-    project: 'vnfrqts-guidelines'
+    project: 'vnfrqts/guidelines'
     jobs:
       - gerrit-info-yaml-verify
     project-name: 'vnfrqts-guidelines'
