--- a/jjb/vnfrqts/vnfrqts-requirements.yaml
+++ b/jjb/vnfrqts/vnfrqts-requirements.yaml
@@ -1,7 +1,7 @@
 ---
 - project:
     name: vnfrqts-requirements
-    project: 'vnfrqts-requirements'
+    project: 'vnfrqts/requirements'
     jobs:
       - gerrit-info-yaml-verify
     project-name: 'vnfrqts-requirements'
