--- a/jjb/vnfrqts/vnfrqts-usecases.yaml
+++ b/jjb/vnfrqts/vnfrqts-usecases.yaml
@@ -1,7 +1,7 @@
 ---
 - project:
     name: vnfrqts-usecases
-    project: 'vnfrqts-usecases'
+    project: 'vnfrqts/usecases'
     jobs:
       - gerrit-info-yaml-verify
     project-name: 'vnfrqts-usecases'
