--- a/jjb/vnfrqts/vnfrqts-epics.yaml
+++ b/jjb/vnfrqts/vnfrqts-epics.yaml
@@ -1,7 +1,7 @@
 ---
 - project:
     name: vnfrqts-epics
-    project: 'vnfrqts-epics'
+    project: 'vnfrqts/epics'
     jobs:
       - gerrit-info-yaml-verify
     project-name: 'vnfrqts-epics'
