--- a/jjb/aai/aai-spike.yaml
+++ b/jjb/aai/aai-spike.yaml
@@ -4,6 +4,12 @@
     project-name: 'aai-spike'
     jobs:
       - gerrit-maven-clm
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-aai-docker-java-daily':
+          pom: 'pom.xml'
+          mvn-goals: 'docker:build'
     project: 'aai/spike'
     stream:
       - 'master':
@@ -12,3 +18,15 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+- project:
+    name: aai-spike-sonar
+    jobs:
+      - gerrit-maven-sonar
+    cron: 'H 11 * * *'
+    build-node: ubuntu1604-builder-4c-4g
+    project: 'aai/spike'
+    project-name: 'aai-spike'
+    branch: 'master'
+    mvn-settings: 'aai-spike-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
