Add INFO.yaml verify job
- Add verification for INFO.yaml files in VNFSDK
- Fix line separation between projects in yaml files
- Fix clm jobs that do not need parameters

Change-Id: I26a3ece73a8b70a35816609f059b1c38a6037132
Issue-ID: CIMAN-134
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
@@ -26,6 +26,7 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
+
 - project:
     name: vnfsdk-dovetail-integration-tox-sonar
     jobs:
@@ -38,3 +39,11 @@
     mvn-settings: 'vnfsdk-dovetail-integration-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vnfsdk-dovetail-integration-info
+    jobs:
+      - gerrit-info-yaml-verify
+    project: 'vnfsdk/dovetail-integration'
+    project-name: 'vnfsdk-dovetail-integration'
+    branch: 'master'
