Add INFO.yaml verify job
- Add verification for INFO.yaml files in VNFSDK
- Fix line separation between projects in yaml files
- Fix clm jobs that do not need parameters

Change-Id: I26a3ece73a8b70a35816609f059b1c38a6037132
Issue-ID: CIMAN-134
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfsdk/vnfsdk-functest.yaml
+++ b/jjb/vnfsdk/vnfsdk-functest.yaml
@@ -3,7 +3,7 @@
     name: vnfsdk-functest
     project-name: 'vnfsdk-functest'
     jobs:
-    - gerrit-maven-clm:
+    - gerrit-maven-clm
     - '{project-name}-{stream}-verify-java'
     - '{project-name}-{stream}-merge-java'
     - '{project-name}-{stream}-release-version-java-daily'
@@ -16,6 +16,7 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
 - project:
     name: vnfsdk-functest-sonar
     jobs:
@@ -28,3 +29,11 @@
     mvn-settings: 'vnfsdk-functest-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vnfsdk-functest-info
+    jobs:
+      - gerrit-info-yaml-verify
+    project: 'vnfsdk/functest'
+    project-name: 'vnfsdk-functest'
+    branch: 'master'
