Add INFO.yaml verify job
- Add verification for INFO.yaml files in VNFSDK
- Fix line separation between projects in yaml files
- Fix clm jobs that do not need parameters

Change-Id: I26a3ece73a8b70a35816609f059b1c38a6037132
Issue-ID: CIMAN-134
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
@@ -17,6 +17,7 @@
     mvn-settings: 'vnfsdk-dovetail-integration-settings'
     build-node: ubuntu1604-builder-4c-4g
     jobs:
+      - gerrit-info-yaml-verify
       - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-{subproject}-merge-java'
@@ -26,6 +27,7 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
+
 - project:
     name: vnfsdk-dovetail-integration-tox-sonar
     jobs:
