--- a/jjb/vnfsdk/vnfsdk-lctest.yaml
+++ b/jjb/vnfsdk/vnfsdk-lctest.yaml
@@ -3,9 +3,9 @@
     name: vnfsdk-lctest
     project: 'vnfsdk/lctest'
     jobs:
+      - gerrit-info-yaml-verify
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-
     project-name: 'vnfsdk-lctest'
     stream:
       - 'master':
