--- a/jjb/vnfsdk/vnfsdk-pkgtools-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-pkgtools-python.yaml
@@ -16,10 +16,12 @@
     mvn-settings: 'vnfsdk-pkgtools-settings'
     build-node: ubuntu1604-builder-4c-4g
     jobs:
+      - gerrit-info-yaml-verify
       - gerrit-python-xc-clm
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{subproject}-python-staging-{stream}'
       - '{project-name}-{subproject}-python-release-{stream}'
+
 - project:
     name: vnfsdk-pkgtools-tox-sonar
     jobs:
