--- a/jjb/vnfsdk/vnfsdk-validation.yaml
+++ b/jjb/vnfsdk/vnfsdk-validation.yaml
@@ -3,11 +3,11 @@
     name: vnfsdk-validation
     project-name: 'vnfsdk-validation'
     jobs:
-    - gerrit-maven-clm:
+    - gerrit-info-yaml-verify
+    - gerrit-maven-clm
     - '{project-name}-{stream}-verify-java'
     - '{project-name}-{stream}-merge-java'
     - '{project-name}-{stream}-release-version-java-daily'
-
     project: 'vnfsdk/validation'
     stream:
       - 'master':
@@ -16,6 +16,7 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
 - project:
     name: vnfsdk-validation-sonar
     jobs:
