--- a/jjb/global-templates-python.yaml
+++ b/jjb/global-templates-python.yaml
@@ -192,7 +192,7 @@
           build-timeout: '{build-timeout}'
 
     triggers:
-      - timed: '@daily'
+      - timed: 'H */4 * * *'
       - gerrit-trigger-release-manually:
           server: '{server-name}'
           project: '{project}'
