--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -1202,6 +1202,7 @@
     #     branch:    git branch (eg. stable/lithium or master)
 
     name: '{project-name}-{stream}-docker-java-daily'
+    id: '{project-name}-{stream}-docker-java-daily'
     project-type: freestyle
     node: 'ubuntu1604-docker-8c-8g'
     disabled: '{disabled}'
@@ -1257,6 +1258,75 @@
     publishers:
       - infra-shiplogs:
           maven-version: '{maven-version}'
+
+- job-template:
+    # Job template for Docker daily jobs
+    #
+    # The purpose of this job template is to run:
+    # 1. login to the docker registry
+    # 2. docker push
+    #
+    # Required Variables:
+    #     branch:    git branch (eg. stable/lithium or master)
+
+    name: '{project-name}-{stream}-docker-java-daily'
+    id: docker-java-daily
+    project-type: freestyle
+    node: '{build-node}'
+    disabled: '{disabled}'
+    properties:
+      - infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: '{project}'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - maven-exec:
+          maven-version: '{maven-version}'
+      - maven-params:
+          mvn-params: '{mvn-params}'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: ''
+          choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - infra-wrappers-docker-build:
+          build-timeout: '{build-timeout}'
+
+    triggers:
+      # 12 AM UTC
+      - timed: 'H 12 * * *'
+      - gerrit-trigger-release-manually:
+          server: '{server-name}'
+          project: '{project}'
+          branch: '{branch}'
+
+    builders:
+
+      - provide-maven-settings:
+          global-settings-file: 'global-settings'
+          settings-file: '{mvn-settings}'
+
+      - docker-login
+
+      - maven-docker-push-daily:
+          maven-version: '{maven-version}'
+          mvn-settings: '{mvn-settings}'
+          pom: '{docker-pom}'
+          # use default as mvn-profile if profile is not needed
+          mvn-profile: '{mvn-profile}'
+          mvn-params: '{mvn-params}'
+
+    publishers:
+      - infra-shiplogs:
+          maven-version: '{maven-version}'
+
 
 - job-template:
     # Job template for building & pushing docker images
@@ -1588,6 +1658,7 @@
     #     maven-properties: properties passed to maven
 
     name: '{project-name}-{stream}-docker-version-java-daily'
+    id: '{project-name}-{stream}-docker-version-java-daily'
     project-type: freestyle
     node: 'ubuntu1604-docker-8c-8g'
     disabled: '{disabled}'
@@ -1614,6 +1685,90 @@
 
     wrappers:
       - infra-wrappers:
+          build-timeout: '{build-timeout}'
+
+    triggers:
+      # 12 AM UTC
+      - timed: 'H 12 * * *'
+      - gerrit-trigger-release-manually:
+          server: '{server-name}'
+          project: '{project}'
+          branch: '{branch}'
+
+    builders:
+
+      - provide-maven-settings:
+          global-settings-file: 'global-settings'
+          settings-file: '{mvn-settings}'
+
+      - inject:
+          properties-file: version.properties
+
+      - maven-target:
+          maven-version: '{maven-version}'
+          goals: 'versions:set versions:update-child-modules versions:commit -B'
+          properties:
+            - 'newVersion=${{release_version}}'
+          settings: '{mvn-settings}'
+          settings-type: cfp
+          global-settings: 'global-settings'
+          global-settings-type: cfp
+
+      - docker-login
+
+      - maven-docker-push-daily:
+          maven-version: '{maven-version}'
+          mvn-settings: '{mvn-settings}'
+          pom: '{docker-pom}'
+          # use default as mvn-profile if profile is not needed
+          mvn-profile: '{mvn-profile}'
+          mvn-params: '{mvn-params}'
+
+    publishers:
+      - infra-shiplogs:
+          maven-version: '{maven-version}'
+
+- job-template:
+    # Job template for building & pushing docker images
+    #
+    # The purpose of this job template is to run:
+    #  1. login to the docker registry
+    #  2. inject a version.properties file and set versions
+    #  3. run a docker push
+    #
+    # Required Variables:
+    #     pom:       name/location of the pom.xml file relative to the workspace
+    #     profile:   the docker profile defined in the pom
+    #     maven-properties: properties passed to maven
+
+    name: '{project-name}-{stream}-docker-version-java-daily'
+    id: 'docker-version-java-daily'
+    project-type: freestyle
+    node: '{build-node}'
+    disabled: '{disabled}'
+    properties:
+      - infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: '{project}'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - maven-exec:
+          maven-version: '{maven-version}'
+      - maven-params:
+          mvn-params: '{mvn-params}'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: ''
+          choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - infra-wrappers-docker-build:
           build-timeout: '{build-timeout}'
 
     triggers:
