--- a/jjb/lab/lab.yaml
+++ b/jjb/lab/lab.yaml
@@ -8,6 +8,8 @@
           job-desc: "Heat-based deployment into Wind River lab Integration-HEAT-Daily tenant"
       - "windriver-oom-daily":
           job-desc: "OOM-based deployment into Wind River lab Integration-OOM-Daily tenant"
+      - "windriver-oom-staging-daily":
+          job-desc: "OOM-based deployment into Wind River lab Integration-OOM-Staging-Daily tenant"
       - "tlab-heat-daily":
           job-desc: "Heat-based deployment into AT&T TLAB Integration-HEAT-Test tenant"
       - "tlab-oom-daily":
