Add lab job for HEAT daily staging build
Change-Id: Ied612a84b2b4b2b1392eadaacd11febbb56aa650
Issue-ID: INT-532
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/lab/lab.yaml
+++ b/jjb/lab/lab.yaml
@@ -8,6 +8,8 @@
           job-desc: "Heat-based deployment into Wind River lab Integration-HEAT-Daily tenant"
       - "windriver-oom-daily":
           job-desc: "OOM-based deployment into Wind River lab Integration-OOM-Daily tenant"
+      - "windriver-heat-staging-daily":
+          job-desc: "Heat-based deployment into Wind River lab Integration-HEAT-Staging-Daily tenant"
       - "windriver-oom-staging-daily":
           job-desc: "OOM-based deployment into Wind River lab Integration-OOM-Staging-Daily tenant"
       - "tlab-heat-daily":
