Change SDNC docker jobs to use dedicated VM
Change-Id: Id653f08bf6d5d338bf6e46aa5ba2a1a67fce86c9
Issue-ID: INT-588
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/sdnc/sdnc-oam.yaml
+++ b/jjb/sdnc/sdnc-oam.yaml
@@ -8,7 +8,22 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
-      - '{project-name}-{stream}-docker-java-daily':
+    project: 'sdnc/oam'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
+    mvn-settings: 'sdnc-oam-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: sdnc-oam-docker
+    project-name: 'sdnc-oam'
+    jobs:
+      - 'docker-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
@@ -21,4 +36,4 @@
     mvn-settings: 'sdnc-oam-settings'
     files: '**'
     archive-artifacts: ''
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: queue-docker-4c-4g
