Install redis as root
Install and enable redis using root
privileges.

Change-Id: Icd6117de41f9dd477aefc48441002544862e7d03
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/redis.yaml
+++ b/packer/provision/redis.yaml
@@ -10,8 +10,10 @@
       package:
         name: redis
         state: present
+      become: true
 
     - name: 'Enable service redis'
       service:
         name: redis
         state: enable
+      become: true
