--- a/packer/provision/redis.yaml
+++ b/packer/provision/redis.yaml
@@ -15,5 +15,5 @@
     - name: 'Enable service redis'
       service:
         name: redis
-        state: enable
+        enabled: yes
       become: true
