Start redis service
Packer expects a service start and not an
enable.
vexxhost: value of state must be one of:
started,stopped,restarted,reloaded, got: enable

Change-Id: I632972b589fd6e1dd20e2e0a19e0ab2660276756
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/redis.yaml
+++ b/packer/provision/redis.yaml
@@ -12,8 +12,8 @@
         state: present
       become: true
 
-    - name: 'Enable service redis'
+    - name: 'Start service redis'
       service:
         name: redis
-        state: enable
+        state: started
       become: true
