Start redis service
Enable redis and then start redis

Change-Id: I632972b589fd6e1dd20e2e0a19e0ab2660276756
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/redis.yaml
+++ b/packer/provision/redis.yaml
@@ -15,5 +15,11 @@
     - name: 'Enable service redis'
       service:
         name: redis
-        state: enable
+        enabled: yes
+      become: true
+
+    - name: 'Start service redis'
+      service:
+        name: redis
+        state: started
       become: true
