Remove repos from Sonar report
ui/dmaapbc is a GUI that will be provided as a stretch goal.  Until then,
remove from Sonar report to avoid mgt escalations.

dmaap/buscontroller is a repo that only builds a docker container, so
there is no useful Sonar results.  Remove from Sonar report to avoid
mgt escalation.

Change-Id: I8f41e56c467c9d77827b8e54257eb75c17af213f
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: CIMAN-180

--- a/jjb/dmaap/dmaap-buscontroller.yaml
+++ b/jjb/dmaap/dmaap-buscontroller.yaml
@@ -25,15 +25,6 @@
     files: '**'
     archive-artifacts: ''
 
-- project:
-    name: dmaap-buscontroller-sonar
-    jobs:
-      - gerrit-maven-sonar
-    cron: 'H 11 * * *'
-    build-node: ubuntu1604-builder-4c-4g
-    project: 'dmaap/buscontroller'
-    project-name: 'dmaap-buscontroller'
-    branch: 'master'
-    mvn-settings: 'dmaap-buscontroller-settings'
-    mvn-goals: 'clean install'
-    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+# removed sonar job from this template because this repo only builds a docker container
+# and the 0% coverage report from Sonar was causing repeated escalations.
