Cleanup node names
Cleanup node names and labels "basebuild" to
"builder".
New packer builds would need to also created new images
using "builder" in their name to eventually change the
image names too.

Change-Id: Icf2975390ca1eda7b2646f6667d745b5587bb474
Issue-ID: CIMAN-182
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jenkins-config/clouds/openstack/cattle/centos7-builder-4c-4g.cfg
+++ b/jenkins-config/clouds/openstack/cattle/centos7-builder-4c-4g.cfg
@@ -1,3 +1,3 @@
 IMAGE_NAME=ZZCI - CentOS 7 - builder - 20180328-1726
-LABELS=centos7-basebuild-4c-4g centos7-builder-4c-4g
+LABELS=centos7-builder-4c-4g
 HARDWARE_ID=v2-highcpu-4
