--- a/jenkins-config/clouds/openstack/cattle/centos7-builder-2c-1g.cfg
+++ b/jenkins-config/clouds/openstack/cattle/centos7-builder-2c-1g.cfg
@@ -1,3 +1,3 @@
 IMAGE_NAME=ZZCI - CentOS 7 - builder - 20180328-1726
-LABELS=centos7-basebuild-2c-1g centos7-builder-2c-1g
+LABELS=centos7-builder-2c-1g
 HARDWARE_ID=v2-highcpu-2
