--- a/jenkins-config/clouds/openstack/cattle/ubuntu1604-builder-4c-2g.cfg
+++ b/jenkins-config/clouds/openstack/cattle/ubuntu1604-builder-4c-2g.cfg
@@ -1,3 +1,3 @@
 IMAGE_NAME=Ubuntu 16.04 - basebuild - 20171102-0010
-LABELS=ubuntu1604-basebuild-4c-4g ubuntu1604-builder-4c-4g
+LABELS=ubuntu1604-builder-4c-2g
 HARDWARE_ID=v2-highcpu-4
