--- a/jenkins-config/clouds/openstack/cattle/ubuntu1604-builder-8c-8g.cfg
+++ b/jenkins-config/clouds/openstack/cattle/ubuntu1604-builder-8c-8g.cfg
@@ -1,3 +1,3 @@
 IMAGE_NAME=Ubuntu 16.04 - basebuild - 20171102-0010
-LABELS=ubuntu1604-basebuild-8c-8g ubuntu1604-builder-8c-8g
+LABELS=ubuntu1604-builder-8c-8g
 HARDWARE_ID=v2-highcpu-8
