Create job definitions for new sdc repo
Added verify and merge jobs to sdc-pubsub project
Added missing parameters
Added sonar job for sdc-pubsub project

Change-Id: Id95a46f40564ce4009450f66d07588226bc0647f
Issue-ID: SDC-1541
Signed-off-by: Idan Amit <ia096e@intl.att.com>

--- a/jjb/sdc/sdc-sdc-pubsub.yaml
+++ b/jjb/sdc/sdc-sdc-pubsub.yaml
@@ -1,8 +1,31 @@
 ---
+
 - project:
     name: sdc-sdc-pubsub-info
     project-name: 'sdc-sdc-pubsub'
     jobs:
+      - gerrit-maven-clm:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
       - gerrit-info-yaml-verify
     project: 'sdc/sdc-pubsub'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'sdc-sdc-pubsub-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-timeout: 60
+
+- project:
+    name: sdc-sdc-pubsub-sonar
+    jobs:
+      - gerrit-maven-sonar
+    cron: 'H 11 * * *'
+    build-node: ubuntu1604-builder-4c-4g
+    project: 'sdc/sdc-pubsub'
+    project-name: 'sdc-sdc-pubsub'
     branch: 'master'
+    mvn-settings: 'sdc-sdc-pubsub-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
