--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -4,18 +4,10 @@
     name: so
     project-name: 'so'
     jobs:
-      - gerrit-maven-clm
-      - '{project-name}-{stream}-verify-profile-java':
-          mvn-profile: 'with-integration-tests'
-          build-node: 'ubuntu1604-docker-8c-8g'
-          archive-artifacts: 'packages/arquillian-unit-tests/target/**/*'
-      - '{project-name}-{stream}-merge-profile-java':
-          mvn-profile: 'with-integration-tests'
-          build-node: 'ubuntu1604-docker-8c-8g'
-          archive-artifacts: 'packages/arquillian-unit-tests/target/**/*'
-      - '{project-name}-{stream}-release-version-profile-java-daily':
-          mvn-profile: 'with-integration-tests'
-          build-node: 'ubuntu1604-docker-8c-8g'
+      - gerrit-maven-clm:
+      - '{project-name}-{stream}-verify-profile-java'
+      - '{project-name}-{stream}-merge-profile-java'
+      - '{project-name}-{stream}-release-version-profile-java-daily'
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
