--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -5,17 +5,9 @@
     project-name: 'so'
     jobs:
       - gerrit-maven-clm
-      - '{project-name}-{stream}-verify-profile-java':
-          mvn-profile: 'with-integration-tests'
-          build-node: 'ubuntu1604-docker-8c-8g'
-          archive-artifacts: 'packages/arquillian-unit-tests/target/**/*'
-      - '{project-name}-{stream}-merge-profile-java':
-          mvn-profile: 'with-integration-tests'
-          build-node: 'ubuntu1604-docker-8c-8g'
-          archive-artifacts: 'packages/arquillian-unit-tests/target/**/*'
-      - '{project-name}-{stream}-release-version-profile-java-daily':
-          mvn-profile: 'with-integration-tests'
-          build-node: 'ubuntu1604-docker-8c-8g'
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
