Trigger testsuite docker build on merge
Change-Id: I818986539d0bce25c235a0694a14f7d2a0c8013f
Issue-ID: INT-605
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/global-templates-python.yaml
+++ b/jjb/global-templates-python.yaml
@@ -197,6 +197,11 @@
           server: '{server-name}'
           project: '{project}'
           branch: '{branch}'
+      - gerrit-trigger-patch-merged:
+          server: '{server-name}'
+          project: '{project}'
+          branch: '{branch}'
+          files: '**'
 
     builders:
       - provide-maven-settings:
