Add DR CSIT implementation in Jenkins
Change-Id: I2dd09239bfb2e64b149d0b070c9b62fa0c0a3a08
Signed-off-by: Conor Ward <conor.ward@ericsson.com>
Issue-ID: DMAAP-105

--- a/jjb/dmaap/dmaap-csit.yaml
+++ b/jjb/dmaap/dmaap-csit.yaml
@@ -10,5 +10,8 @@
       - 'mrpubsub':
           trigger_jobs:
             - '{project-name}-{stream}-release-java-daily-checkstyle'
+      - 'dr-suite':
+          trigger_jobs:
+            - '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
     branch: 'master'
