--- a/jjb/dcaegen2/dcaegen2-services-pm-mapper.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-pm-mapper.yaml
@@ -13,7 +13,7 @@
     maven-deploy-properties: |
       deployAtEnd=true
     archive-artifacts: ''
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: ubuntu1604-docker-8c-8g
     jobs:
       - gerrit-maven-clm
       - '{project-name}-{stream}-release-version-java-daily'
