Fix clm job definition
Cleanup CLM job definitions that
do not require any parameters

Change-Id: Ib0125bcaa5e3c0a1f70041a78fec59c445e00645
Issue-ID: CIMAN-184
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aai/aai-search-data-service.yaml
+++ b/jjb/aai/aai-search-data-service.yaml
@@ -3,7 +3,7 @@
     name: aai-search-data-service-master
     project-name: 'aai-search-data-service'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
