--- a/jjb/vfc/vfc-nfvo-catalog.yaml
+++ b/jjb/vfc/vfc-nfvo-catalog.yaml
@@ -13,7 +13,7 @@
           path: '.'
           pattern: '**'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
