--- a/jjb/vfc/vfc-nfvo-wfengine-java.yaml
+++ b/jjb/vfc/vfc-nfvo-wfengine-java.yaml
@@ -19,7 +19,7 @@
           script:
             !include-raw-escape: 'build-nfvo-wfengine-engine-activiti-extension-docker-image.sh'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
