--- a/jjb/aai/aai-data-router.yaml
+++ b/jjb/aai/aai-data-router.yaml
@@ -3,7 +3,7 @@
     name: aai-data-router-master
     project-name: 'aai-data-router'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
