--- a/jjb/aai/aai-esr-server.yaml
+++ b/jjb/aai/aai-esr-server.yaml
@@ -3,7 +3,7 @@
     name: aai-esr-server-master
     project-name: 'aai-esr-server'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
