--- a/jjb/aai/aai-sparky-fe.yaml
+++ b/jjb/aai/aai-sparky-fe.yaml
@@ -4,7 +4,7 @@
     project-name: 'aai-sparky-fe'
     build-node: 'centos7-builder-4c-4g'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
