--- a/jjb/aai/aai-traversal.yaml
+++ b/jjb/aai/aai-traversal.yaml
@@ -3,7 +3,7 @@
     name: aai-traversal-master
     project-name: 'aai-traversal'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
