--- a/jjb/ccsdk/apps.yaml
+++ b/jjb/ccsdk/apps.yaml
@@ -3,7 +3,7 @@
     name: ccsdk-apps
     project-name: 'ccsdk-apps'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
