--- a/jjb/cli/cli.yaml
+++ b/jjb/cli/cli.yaml
@@ -4,7 +4,7 @@
     name: cli
     project-name: 'cli'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
