--- a/jjb/dcaegen2/dcaegen2.yaml
+++ b/jjb/dcaegen2/dcaegen2.yaml
@@ -3,7 +3,7 @@
     name: dcaegen2
     project-name: 'dcaegen2'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
