--- a/jjb/demo/demo.yaml
+++ b/jjb/demo/demo.yaml
@@ -4,7 +4,7 @@
     name: demo
     project-name: 'demo'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
