--- a/jjb/holmes/holmes-dsa.yaml
+++ b/jjb/holmes/holmes-dsa.yaml
@@ -3,7 +3,7 @@
     name: holmes-dsa
     project-name: 'holmes-dsa'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
