--- a/jjb/msb/msb-java-sdk.yaml
+++ b/jjb/msb/msb-java-sdk.yaml
@@ -3,7 +3,7 @@
     name: msb-java-sdk
     project-name: 'msb-java-sdk'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
