--- a/jjb/policy/policy-apex-pdp.yaml
+++ b/jjb/policy/policy-apex-pdp.yaml
@@ -3,7 +3,7 @@
     name: policy-apex-pdp
     project-name: 'policy-apex-pdp'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-scm-mvn-script':
           mvn-goals: 'clean deploy -B
