--- a/jjb/policy/policy-core.yaml
+++ b/jjb/policy/policy-core.yaml
@@ -3,7 +3,7 @@
     name: policy-core
     project-name: 'policy-core'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
