--- a/jjb/policy/policy-drools-applications.yaml
+++ b/jjb/policy/policy-drools-applications.yaml
@@ -3,7 +3,7 @@
     name: policy-drools-applications
     project-name: 'policy-drools-applications'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily':
