--- a/jjb/policy/policy-xacml-pdp.yaml
+++ b/jjb/policy/policy-xacml-pdp.yaml
@@ -3,7 +3,7 @@
     name: policy-xacml-pdp
     project-name: 'policy-xacml-pdp'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
