--- a/jjb/sdc/sdc-onap-ui.yaml
+++ b/jjb/sdc/sdc-onap-ui.yaml
@@ -4,7 +4,7 @@
     name: sdc-onap-ui
     project-name: 'sdc-onap-ui'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
     project: 'sdc/onap-ui'
