--- a/jjb/vfc/vfc-gvnfm-vnfmgr-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnfmgr-java.yaml
@@ -12,7 +12,7 @@
           pom: 'mgr/pom.xml'
           pattern: 'mgr/**'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
