--- a/jjb/vfc/vfc-nfvo-driver-sfc.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-sfc.yaml
@@ -12,7 +12,7 @@
           pom: 'zte/sfc-driver/pom.xml'
           pattern: 'zte/sfc-driver/**'
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
