--- a/jjb/vfc/vfc-nfvo-resmanagement.yaml
+++ b/jjb/vfc/vfc-nfvo-resmanagement.yaml
@@ -9,7 +9,7 @@
           branch: 'master'
     build-node: ubuntu1604-builder-4c-4g
     jobs:
-      - gerrit-maven-clm:
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
