Fix nested trigger_jobs
After upgrading to JJB 2.2.0 any nested parameters
up to 3 levels will be reported as a failure. 
We need to fix those so that there is only 2
levels maximum.
Committing this as a single patch since our verify
job is broken.

Issue-ID: CIMAN-184
Change-Id: I460f714b2f66cc8ac4df978d9293c932aa743574
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aaf/aaf-csit.yaml
+++ b/jjb/aaf/aaf-csit.yaml
@@ -8,7 +8,6 @@
     stream: 'master'
     functionality:
       - 'aafapi':
-          trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+          trigger_jobs: '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
     branch: 'master'
