--- a/jjb/aaf/aaf-sms-csit.yaml
+++ b/jjb/aaf/aaf-sms-csit.yaml
@@ -8,7 +8,6 @@
       stream: 'master'
       functionality:
         - 'sms-test-plan':
-            trigger_jobs:
-              - 'aaf-sms-master-docker-golang-shell-daily'
+            trigger_jobs: 'aaf-sms-master-docker-golang-shell-daily'
       robot-options: ''
       branch: 'master'
