--- a/jjb/appc/appc-csit.yaml
+++ b/jjb/appc/appc-csit.yaml
@@ -12,6 +12,5 @@
           branch: 'beijing'
     functionality:
       - 'healthcheck':
-          trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+          trigger_jobs: '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
