--- a/jjb/clamp/clamp-csit.yaml
+++ b/jjb/clamp/clamp-csit.yaml
@@ -8,10 +8,8 @@
     stream: 'master'
     functionality:
       - 'APIs':
-          trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+          trigger_jobs: '{project-name}-{stream}-release-java-daily-checkstyle'
       - 'UIs':
-          trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+          trigger_jobs: '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
     branch: 'master'
