--- a/jjb/holmes/holmes-csit.yaml
+++ b/jjb/holmes/holmes-csit.yaml
@@ -8,7 +8,6 @@
     stream: 'master'
     functionality:
       - 'sanity-check':
-          trigger_jobs:
-            - 'holmes-rule-management-master-docker-java-daily'
+          trigger_jobs: 'holmes-rule-management-master-docker-java-daily'
     robot-options: ''
     branch: 'master'
