--- a/jjb/music/music-csit.yaml
+++ b/jjb/music/music-csit.yaml
@@ -8,8 +8,7 @@
      stream: 'master'
      functionality:
        - 'music-test-plan':
-           trigger_jobs:
-             - 'music-master-docker-version-java-daily'
+           trigger_jobs: 'music-master-docker-version-java-daily'
      robot-options: ''
      branch: 'master'
 
