--- a/jjb/music/music-distributed-kv-store-csit.yaml
+++ b/jjb/music/music-distributed-kv-store-csit.yaml
@@ -8,7 +8,6 @@
     stream: 'master'
     functionality:
       - 'music-distributed-kv-store-test-plan':
-          trigger_jobs:
-            - 'music-distributed-kv-store-master-docker-golang-shell-daily'
+          trigger_jobs: 'music-distributed-kv-store-master-docker-golang-shell-daily'
     robot-options: ''
     branch: 'master'
