--- a/jjb/optf/optf-has-csit.yaml
+++ b/jjb/optf/optf-has-csit.yaml
@@ -12,7 +12,6 @@
            branch: beijing
      functionality:
        - 'has':
-           trigger_jobs:
-             - 'optf-has-master-conductor-docker-java-version-shell-daily'
+           trigger_jobs: 'optf-has-master-conductor-docker-java-version-shell-daily'
      robot-options: ''
      branch: 'master'
