--- a/jjb/vid/vid-csit.yaml
+++ b/jjb/vid/vid-csit.yaml
@@ -8,7 +8,6 @@
     stream: 'master'
     functionality:
       - 'healthCheck':
-          trigger_jobs:
-            - '{project-name}-{stream}-docker-version-java-daily'
+          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
     robot-options: ''
     branch: 'master'
