--- a/jjb/dmaap/dmaap-csit.yaml
+++ b/jjb/dmaap/dmaap-csit.yaml
@@ -8,7 +8,6 @@
     stream: 'master'
     functionality:
       - 'mrpubsub':
-          trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+          trigger_jobs: '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
     branch: 'master'
