--- a/jjb/multicloud/multicloud-openstack-pike-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-pike-csit.yaml
@@ -8,10 +8,8 @@
     stream: 'master'
     functionality:
       - 'functionality1':
-          trigger_jobs:
-            - 'multicloud-openstack-master-docker-java-version-shell-daily'
+          trigger_jobs: 'multicloud-openstack-master-docker-java-version-shell-daily'
       - 'hpa-discovery':
-          trigger_jobs:
-            - 'multicloud-openstack-master-docker-java-version-shell-daily'
+          trigger_jobs: 'multicloud-openstack-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
