--- a/jjb/vfc/vfc-nfvo-resmanagement-csit.yaml
+++ b/jjb/vfc/vfc-nfvo-resmanagement-csit.yaml
@@ -8,7 +8,6 @@
     stream: 'master'
     functionality:
       - 'sanity-check':
-          trigger_jobs:
-            - 'vfc-nfvo-resmanagement-master-docker-java-version-shell-daily'
+          trigger_jobs: 'vfc-nfvo-resmanagement-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
