--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -6,10 +6,10 @@
     project-name: 'policy'
     stream: 'master'
     functionality:
-      - 'health':
-          trigger_jobs:
-            - 'policy-engine-{stream}-merge-scm-mvn-script'
-            - 'policy-drools-pdp-{stream}-merge-scm-mvn-script'
-            - 'policy-drools-applications-{stream}-merge-java'
+      - 'health'
+    trigger_jobs:
+      - 'policy-engine-{stream}-merge-scm-mvn-script'
+      - 'policy-drools-pdp-{stream}-merge-scm-mvn-script'
+      - 'policy-drools-applications-{stream}-merge-java'
     robot-options: ''
     branch: 'master'
